# dimension-inference

./: APA2.cabal  Makefile  README  TODO
samples/: coulomb.sf  fix.sf  operator.sf  test.sf  typetest.sf
src/: Main.hs
src/SystemF/: Dimensions.hs  Inference.ag  Matrix.hs  Parser.hs  Substitution.hs  Types.hs  Units.hs
src/SystemF/Test/: Dimensions.hs
