Name:               APA2
Version:            1.0
Cabal-Version:      >= 1.2
License:            GPL
Author:             Bram Schuur
                    Ruud Koot <r.koot@students.uu.nl>
                    Henk-Erik van der Hoek
Synopsis:           Units of measure type inference
Description:        Units of measure type inference
Build-Type:         Simple

Executable php2
  Main-Is:          Main.hs
  Build-Depends:    base       >= 4 && < 5
                  , parsec     == 2.1.0.1
                  , containers >= 0.2                  
                  , mtl        == 1.1.0.2
                  , uuagc
                  , filepath
  Hs-Source-Dirs:   src/
